--- a/res/layout/activity_testimonios.xml
+++ b/res/layout/activity_testimonios.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ScrollView
+    <mx.com.factico.cide.views.CustomScrollView
+        android:id="@+id/testimonios_sv_scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true" >
@@ -16,7 +17,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/default_background_color"
+                android:background="@color/white"
                 android:orientation="vertical" >
 
                 <ImageView
@@ -35,7 +36,7 @@
                     android:id="@+id/testimonios_vg_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/default_background_color"
+                    android:background="@color/white"
                     android:orientation="vertical"
                     android:paddingBottom="@dimen/activity_vertical_margin"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -73,7 +74,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/activity_vertical_margin"
                     android:background="@color/btn_ligth_green_color"
-                    android:divider="@drawable/divider_horizontal_white"
+                    android:divider="@drawable/divider_horizontal"
                     android:orientation="vertical"
                     android:paddingBottom="@dimen/activity_vertical_margin"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -118,7 +119,7 @@
                 android:textSize="15sp"
                 android:textStyle="bold" />
         </FrameLayout>
-    </ScrollView>
+    </mx.com.factico.cide.views.CustomScrollView>
 
     <include
         android:layout_width="match_parent"
