--- a/res/layout/activity_testimonios.xml
+++ b/res/layout/activity_testimonios.xml
@@ -115,7 +115,8 @@
                     android:paddingBottom="@dimen/activity_vertical_margin"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:paddingRight="@dimen/activity_horizontal_margin"
-                    android:paddingTop="@dimen/activity_vertical_margin" />
+                    android:paddingTop="@dimen/activity_vertical_margin"
+                    android:visibility="gone" />
             </LinearLayout>
         </LinearLayout>
     </mx.com.factico.cide.views.CustomScrollView>
