--- a/res/layout/activity_facebook.xml
+++ b/res/layout/activity_facebook.xml
@@ -2,22 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/drawable_bgr_gradient_dark"
+    android:gravity="center"
     android:orientation="vertical"
-    android:background="@drawable/drawable_bgr_gradient_dark" >
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <Button
-        android:id="@+id/facebook_btn_post"
+    <mx.com.factico.cide.views.CustomTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:text="@string/propuestas_login_fb_label"
+        android:textColor="@color/white"
+        android:textSize="30sp" />
+
+    <mx.com.factico.cide.views.CustomTextView
+        android:id="@+id/facebook_btn_facebook_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/facebook_post_message"
-        android:background="@drawable/selector_btn_ligth" />
-    
-    <TextView
-        android:id="@+id/facebook_tv_status"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:background="@drawable/selector_btn_ligth"
         android:gravity="center"
-        android:text=""
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:paddingBottom="15dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="15dp"
+        android:text="@string/propuestas_login_fb"
+        android:textColor="@color/white"
+        android:textSize="15sp" />
 
 </LinearLayout>
