--- a/res/layout/fragment_propuestas_votes.xml
+++ b/res/layout/fragment_propuestas_votes.xml
@@ -144,39 +144,19 @@
                         android:paddingBottom="@dimen/activity_vertical_margin"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
-                        android:paddingTop="@dimen/activity_vertical_margin"
                         android:text="@string/propuestas_votes_same"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="@color/title_color"
                         cide:typefaceRoboto="SourceSansPro_Regular"
                         android:visibility="gone" />
                     
-                    <mx.com.factico.cide.views.CustomTextView
-                        android:id="@+id/propuestas_votes_tv_question"
+                    <include 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        android:paddingTop="@dimen/activity_vertical_margin"
-                        android:text=""
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="@color/title_color"
-                        cide:typefaceRoboto="SourceSansPro_Regular" />
-
-                    <LinearLayout
-                        android:id="@+id/propuestas_votes_vg_answers"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/activity_vertical_margin"
-                        android:background="@color/white"
-                        android:divider="@drawable/divider_vertical_white"
-                        android:orientation="horizontal"
-                        android:padding="2dp"
-                        android:showDividers="middle" />
+                        layout="@layout/fragment_propuestas_question" />
 
                     <mx.com.factico.cide.views.CustomTextView
-                        android:id="@+id/propuestas_votes_btn_answers_vermas"
+                        android:id="@+id/propuestas_votes_btn_comments_vermas"
                         style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
