--- a/res/layout/fragment_propuestas_question.xml
+++ b/res/layout/fragment_propuestas_question.xml
@@ -15,11 +15,12 @@
         android:textColor="@color/white" />
 
     <ViewFlipper
+        android:id="@+id/propuestas_votes_vf_question"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/hololigth" >
-
+        
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,7 +48,7 @@
                 android:orientation="vertical"
                 android:padding="2dp" />
         </LinearLayout>
-
+        
         <LinearLayout
             android:id="@+id/propuestas_votes_vg_chart"
             android:layout_width="match_parent"
