--- a/res/layout/fragment_propuestas_comments.xml
+++ b/res/layout/fragment_propuestas_comments.xml
@@ -3,23 +3,22 @@
     xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/drawable_bgr_gradient_dark"
     android:orientation="vertical" >
 
     <mx.com.factico.cide.views.CustomScrollView
         android:id="@+id/propuestas_comments_sv_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_weight="1"
+        android:background="@color/white"
         android:scrollbarThumbVertical="@drawable/drawable_customscroll" >
 
         <LinearLayout
             android:id="@+id/propuestas_comments_vg_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:background="@color/white"
             android:divider="@drawable/divider_horizontal_green"
             android:orientation="vertical"
@@ -33,23 +32,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin" >
 
         <mx.com.factico.cide.views.CustomEditText
             android:id="@+id/propuestas_comments_et_comment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="@string/propuestas_btn_comments_hintcomment"
             android:padding="10dp"
             android:textColor="@color/default_text_color"
             android:textColorHint="@color/hololigth"
-            android:textAppearance="@android:attr/textAppearanceSmall"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:hint="@string/propuestas_btn_comments_hintcomment"
             cide:typefaceRoboto="SourceSansPro_Regular" />
-
-        <mx.com.factico.cide.views.CustomTextView
+        
+        <mx.com.factico.cide.views.CustomTextView 
             android:id="@+id/propuestas_comments_btn_sendcomment"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -58,9 +58,9 @@
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:text="@string/propuestas_btn_comments_sendcomment"
-            android:textAppearance="@android:attr/textAppearanceMedium"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/white"
-            cide:typefaceRoboto="SourceSansPro_Regular" />
+            cide:typefaceRoboto="RobotoSlab_Regular" />
     </LinearLayout>
 
 </LinearLayout>
