--- a/res/layout/fragment_propuestas_question.xml
+++ b/res/layout/fragment_propuestas_question.xml
@@ -20,7 +20,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/hololigth" >
-        
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -30,12 +30,12 @@
                 android:id="@+id/propuestas_votes_tv_question"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:text=""
-                android:gravity="center"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/title_color"
                 cide:typefaceRoboto="RobotoSlab_Bold" />
@@ -48,12 +48,32 @@
                 android:orientation="vertical"
                 android:padding="2dp" />
         </LinearLayout>
-        
+
         <LinearLayout
             android:id="@+id/propuestas_votes_vg_chart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" />
+            android:orientation="vertical"
+            android:padding="10dp" >
+
+            <mx.com.factico.cide.views.CustomTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:text="@string/propuestas_question_chart_title"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/title_color"
+                cide:typefaceRoboto="RobotoSlab_Bold" />
+
+            <mx.com.factico.cide.views.CircleChartView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+        </LinearLayout>
     </ViewFlipper>
 
 </LinearLayout>
