--- a/res/layout/fragment_propuestas_votes.xml
+++ b/res/layout/fragment_propuestas_votes.xml
@@ -8,34 +8,40 @@
     android:paddingLeft="10dp"
     android:paddingRight="10dp" >
 
-    <LinearLayout
+    <mx.com.factico.cide.views.CustomScrollView
+        android:id="@+id/propuestas_votes_sv_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/drawable_bgr_rounded_white"
-        android:orientation="horizontal"
-        android:padding="5dp" >
-
-        <ImageView
-            android:id="@+id/propuestas_votes_iv_userphoto"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="5dp"
-            android:contentDescription="@string/propuesta_name"
-            android:scaleType="centerInside"
-            android:src="@drawable/ic_launcher" />
+        android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingStart="10dp"
+        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
+        android:scrollbarThumbVertical="@drawable/drawable_customscroll" >
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/drawable_bgr_rounded_white"
             android:orientation="vertical" >
 
-            <mx.com.factico.cide.views.CustomScrollView
-                android:id="@+id/propuestas_votes_sv_container"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:scrollbarThumbVertical="@drawable/drawable_customscroll" >
+                android:background="@drawable/drawable_bgr_rounded_white"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp"
+                android:paddingStart="10dp"
+                android:paddingRight="0dp"
+                android:paddingEnd="0dp" >
+
+                <ImageView
+                    android:id="@+id/propuestas_votes_iv_userphoto"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="5dp"
+                    android:contentDescription="@string/propuesta_name"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_launcher" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -106,11 +112,11 @@
                             android:layout_width="0dp"
                             android:layout_height="50dp"
                             android:layout_weight="1"
-                            android:padding="10dp"
                             android:background="@drawable/selector_btn_votes_favor"
+                            android:contentDescription="@string/propuesta_name"
+                            android:padding="10dp"
                             android:scaleType="centerInside"
-                            android:src="@drawable/ic_propuestas_votos_favor"
-                            android:contentDescription="@string/propuesta_name" />
+                            android:src="@drawable/ic_propuestas_votos_favor" />
 
                         <ImageView
                             android:id="@+id/propuestas_votes_btn_abstencion"
@@ -118,23 +124,23 @@
                             android:layout_width="0dp"
                             android:layout_height="50dp"
                             android:layout_weight="1"
-                            android:padding="10dp"
                             android:background="@drawable/selector_btn_votes_abstencion"
+                            android:contentDescription="@string/propuesta_name"
+                            android:padding="10dp"
                             android:scaleType="centerInside"
-                            android:src="@drawable/ic_propuestas_votos_abstencion"
-                            android:contentDescription="@string/propuesta_name" />
-                        
+                            android:src="@drawable/ic_propuestas_votos_abstencion" />
+
                         <ImageView
                             android:id="@+id/propuestas_votes_btn_contra"
                             style="?android:attr/buttonBarButtonStyle"
                             android:layout_width="0dp"
                             android:layout_height="50dp"
                             android:layout_weight="1"
-                            android:padding="10dp"
                             android:background="@drawable/selector_btn_votes_contra"
+                            android:contentDescription="@string/propuesta_name"
+                            android:padding="10dp"
                             android:scaleType="centerInside"
-                            android:src="@drawable/ic_propuestas_votos_contra"
-                            android:contentDescription="@string/propuesta_name" />
+                            android:src="@drawable/ic_propuestas_votos_contra" />
                     </LinearLayout>
 
                     <mx.com.factico.cide.views.CustomTextView
@@ -147,29 +153,18 @@
                         android:text="@string/propuestas_votes_same"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="@color/title_color"
-                        cide:typefaceRoboto="SourceSansPro_Regular"
-                        android:visibility="gone" />
-                    
-                    <include 
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        layout="@layout/fragment_propuestas_question" />
-
-                    <mx.com.factico.cide.views.CustomTextView
-                        android:id="@+id/propuestas_votes_btn_comments_vermas"
-                        style="?android:attr/buttonBarButtonStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/selector_btn_ligth"
-                        android:gravity="center"
-                        android:text="@string/propuestas_btn_comments_vermas"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="@color/white"
                         android:visibility="gone"
                         cide:typefaceRoboto="SourceSansPro_Regular" />
                 </LinearLayout>
-            </mx.com.factico.cide.views.CustomScrollView>
+            </LinearLayout>
+
+            <include
+                android:id="@+id/propuestas_votes_vg_question"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                layout="@layout/fragment_propuestas_question" />
         </LinearLayout>
-    </LinearLayout>
+    </mx.com.factico.cide.views.CustomScrollView>
 
 </LinearLayout>
